Refactoriza `diferenteVersion` para usar comparación semántica mejorada. Elimina dependencia de `URL` y usa `URI` en `fetchLatestRelease`.